# x264-rs

./: .gitmodules  Cargo.toml
x264-sys/: Cargo.toml  build.rs
x264-sys/data/: x264.h
