[package]
name = "x264-sys"
version = "0.2.2"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to x264"
repository = "https://github.com/sucaba/x264-rs"
edition = "2018"

[features]
default = []

[build-dependencies]
bindgen = "0.71.*"
autotools = "0.2.*"

[dependencies]
